--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ collections:
   recommendations:
 
 # Build settings
-theme: minima
+remote_theme: daattali/beautiful-jekyll@6.0.1
 plugins:
   - jekyll-feed
 
