switch to just-the-docs

--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,16 @@
 title: Couch PoBi
 email: couch-pobi@proton.me
 description: >- # this means to ignore newlines until "baseurl:"
+theme: just-the-docs
+# logo: "/assets/pobi.svg"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 collections:
   recommendations:
 
+search_enabled: false
 # Build settings
-theme: minima
 plugins:
   - jekyll-feed
 
